qt4-x11 (4:4.7.3-2) UNRELEASED; urgency=low

  * Add patch cherry-picked upstream:
    - Fixed_bug_in_X11_backend_when_creating_translucent_windows.patch

 -- Fathi Boudra <fabo@debian.org>  Fri, 10 Jun 2011 09:21:12 +0300

qt4-x11 (4:4.7.3-1) unstable; urgency=low

  * New upstream release.
  * Remove blacklist_fraudulent_comodo_certificates.diff - stolen upstream.
  * Add patches cherry-picked upstream:
    - Fix_GL_problems_on_stock_1.4_SGX_drivers.patch
    - Fixed_missing_text_when_using_static_text_items_in_GL_2_engine.patch
    - Update_createwindow_in_qgl_x11egl.patch
    - Improve-performance-of-partial-updates-in-raster-win.patch
    - Fix_transformIsSimple_in_QGraphicsScene.patch
    - Micro-optimization_for_QSpanData.patch
    - Some_Optimizations_for_the_gray_raster.patch
    - Make_use_of_the_fast_image_paths.patch
    - Add_support_for_QT_USE_DRAG_DISTANCE_env_var.patch
    - Prevent_recursion_when_creating_window_surface.patch

  [ Pino Toscano ]
  * Build depend on libssl-dev. (Closes: #623596)

  [ Modestas Vainius ]
  * Build with system compiler on s390 (which is 4.6 now). However, in order to
    avoid #606079, build depend >= g++ 4:4.5 on s390.
  * Bump Standards-Version to 3.9.2: no changes needed.
  * Drop blacklist_fraudulent_comodo_certificates.diff patch, upstream.
  * Refresh patches.
  * Build depend on g++-4.6 (>= 4.6.0-7~) [armel] and make libqt4-dev break
    g++-4.6 (<< 4.6.0-7~). (Closes: #625825)
  * Drop 91_s390_use_gstabs.diff patch. It's no longer needed as webkit is not
    built from Qt sources anymore.
  * Drop 89_powerpc_opts.diff patch. No longer needed with gcc 4.4 or later.
  * Build designer library with -gstabs on powerpc to avoid gcc 4.6 dwarf2 ICE,
    which makes the package FTBFS (patch powerpc_designer_gstabs.diff).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 May 2011 13:08:38 +0300

qt4-x11 (4:4.7.2-4) unstable; urgency=low

  [ José Manuel Santamaría Lema ]