@@ -8,7 +8,10 @@ Build-Depends: debhelper (>= 7.4.13), pkg-kde-tools (>= 0.6.4), flex,
  freetds-dev, g++ (>= 4:4.5) [s390], g++-4.6 (>= 4.6.0-7~) [armel],
  libasound2-dev [!kfreebsd-amd64 !kfreebsd-i386 !hurd-i386],
  libaudio-dev, libcups2-dev, libdbus-1-dev, libfreetype6-dev,
- libgl1-mesa-dev | libgl-dev, libglib2.0-dev, libglu1-mesa-dev | libglu-dev,
+ libgl1-mesa-dev | libgl-dev [!armel !armhf],
+ libglib2.0-dev,
+ libglu1-mesa-dev | libglu-dev [!armel !armhf],
+ libgles2-mesa-dev [armel armhf] | libgles2-dev [armel armhf],
  libgstreamer0.10-dev, libgstreamer-plugins-base0.10-dev, libgtk2.0-dev,
  libice-dev, unixodbc-dev, libjpeg-dev, libmng-dev, libmysqlclient-dev,
 # libopenvg1-mesa-dev,
