@@ -38,6 +38,13 @@ ifeq ($(DEB_HOST_ARCH),armhf)
 	extra_configure_opts += -arch armv6
 endif
 
+ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), armel armhf))
+	extra_configure_opts += -opengl es2
+else
+	extra_configure_opts += -opengl desktop
+	extra_configure_opts += -no-egl
+endif
+
 ifeq ($(DEB_HOST_ARCH_OS),linux)
   ifeq ($(DEB_HOST_ARCH),amd64)
 	platform_arg = linux-g++-64
@@ -125,8 +132,6 @@ endif
 	            -gtkstyle \
 	            -system-nas-sound \
 	            -no-openvg \
-	            -opengl desktop \
-	            -no-egl \
 	            -lfontconfig \
 	            -I/usr/include/freetype2 \
 	            -qvfb \
