@@ -2,6 +2,9 @@ qt4-x11 (4:4.7.3-2) UNRELEASED; urgency=low
 
   * Add patch cherry-picked upstream:
     - Fixed_bug_in_X11_backend_when_creating_translucent_windows.patch
+  * Build Qt with GL ES 2 on armel and armhf architectures:
+    - debian/control: add libgles2-mesa-dev | libgles2-dev build-dependencies.
+    - debian/rules: pass -opengl es2 configure option.
 
  -- Fathi Boudra <fabo@debian.org>  Fri, 10 Jun 2011 09:21:12 +0300
 
